--- a/Emo/main.html
+++ b/Emo/main.html
@@ -6,6 +6,6 @@
     <body>
         <h1>杜哥 Emo™ 超强高质量人类体验，人类再进化</h1>
             <p>只需要轻轻一点就可以领取Emo认证！</p>
-        <a href="https://github.com/jwy2008/Cloud">在GitHub关注我们！:</a>
+        <a href="https://github.com/jwy2008/Cloud/tree/main/Emo">在GitHub关注我们！:</a>
     </body>
 </html>
