--- a/watermelon/index.html
+++ b/watermelon/index.html
@@ -19,7 +19,7 @@
 					class="octicon octicon-link"></span></a><a href="./store.html">商店</a></h2>
 		<p><img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2Fe52fc5ecfd84dbc08292e5660f8ac1242f53136e.png&amp;refer=http%3A%2F%2Fi0.hdslb.com&amp;app=2002&amp;size=f9999,10000&amp;q=a80&amp;n=0&amp;g=0n&amp;fmt=auto?sec=1655906699&amp;t=a3ae534e1648b12b04b77a7e5b674d3a"
 				alt="幽幽子">
-			<del>我們隸屬於美利堅合眾國,專為海外華人服務,大陸華人請自行退出</del>
+		<h3 align="center"><del>我們隸屬於美利堅合眾國,專為海外華人服務,大陸華人請自行退出</del></h3>
 		</p>
 	</div>
 </body>
