--- a/watermelon/store.html
+++ b/watermelon/store.html
@@ -22,13 +22,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>隋哥の瓜摊</title>
-		<h1 align="center" ,id="隋哥の瓜摊"><a class="anchor" name="隋哥の瓜摊" href="#隋哥の瓜摊"><span
-					class="octicon octicon-link"></span></a><a
-				href="https://www.bilibili.com/video/BV1JT4y1Q7Zc?spm_id_from=333.337.search-card.all.click">隋哥の瓜摊</a>
+		<h1 align="center">
+			<a href="https://www.bilibili.com/video/BV1JT4y1Q7Zc?spm_id_from=333.337.search-card.all.click">隋哥の瓜摊</a>
 		</h1>
 		<h2 align="center" ,id="全部商品分类"><a class="anchor" name="全部商品分类" href="#全部商品分类"><span
-					class="octicon octicon-link"></span></a>全部商品分类</h>
+					class="octicon octicon-link"></span></a></h>
 			<ol>
+				<p>全部商品分类</p>
 				<p onclick="alert('这周周五,我在705班等你!')">普通の瓜 5元/斤</p>
 				<p
 					onclick="location.replace('https://n.sinaimg.cn/sinakd10016/482/w1249h833/20210912/c3c6-280f40141e003c72192cc5716d96f46c.png')">
@@ -37,7 +37,10 @@
 				<p onclick="location.replace('https://www.bilibili.com/video/BV1xF411a7p8')">伊吹萃香 镇店之宝,仅用于展示</p>
 			</ol>
 		</h2>
-		<del>我們隸屬於美利堅合眾國,專為海外華人服務,大陸華人請自行退出</del>
+		<h3 align="center">
+			<del>我們隸屬於美利堅合眾國,專為海外華人服務,大陸華人請自行退出</del>
+		</h3>
+
 	</div>
 </body>
 
